libs/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: '100m'
spec:
  tls:
    - hosts:
        - are.flolu.com
        - api.are.flolu.com
      secretName: angular-render-emails-tls
  rules:
    - host: are.flolu.com
      http:
        paths:
          - backend:
              serviceName: client
              servicePort: 8080
    - host: api.are.flolu.com
      http:
        paths:
          - backend:
              serviceName: server
              servicePort: 3000
